# simpledb

./: .gitignore  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  simpledb.cabal  test.sql
.github/workflows/: CI.yaml
app/: Main.hs
src/: Lib.hs  Parser.hs  Printer.hs  Sql.hs  Table.hs
test/: Spec.hs
